Added button to switch between light and dark theme

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -760,6 +760,10 @@
     }
 }
 
+.change-theme {
+    margin-right: 15px;
+}
+
 .navbar-main-dark .container-fluid .navbar-inr .action-otr .btn-create {
     margin-right: 16px;
 }
